Removido arquivo css

--- a/index.html
+++ b/index.html
@@ -4,23 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="input-container">
-      <h1>Adione um número</h1>
-      <div>
-        <span>Ordem crescente:</span>
-        <input type="number">
-        <span>Resultado:</span>
-      </div>
-      <div>
-        <span>Ordem decrescente:</span>
-        <input type="number">
-        <span>Resultado:</span>
-      </div>
-      <button>Enviar</button>
-    </div>
   <script src="index.js"></script>
 </body>
 </html>
